--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,19 +8,45 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <header class="navbar navbar-fixed-top navbar-inverse">
-       <div class="container-fluid">
-         <nav>
-           <a class="navbar-brand" <%= link_to "StackOverflow", root_path %></a>
+    <nav role="navigation" class="navbar navbar-default">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+        <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" <%= link_to "StackOverflow", root_path %></a>
+    </div>
+    <!-- Collection of nav links, forms, and other content for toggling -->
+      <div id="navbarCollapse" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">Profile</a></li>
+            <li class="dropdown">
+                <a data-toggle="dropdown" class="dropdown-toggle" href="#">Messages <b class="caret"></b></a>
+                <ul role="menu" class="dropdown-menu">
+                    <li><a href="#">Inbox</a></li>
+                    <li><a href="#">Drafts</a></li>
+                    <li><a href="#">Sent Items</a></li>
+                    <li class="divider"></li>
+                    <li><a href="#">Trash</a></li>
+                </ul>
+            </li>
+        </ul>
+        <form role="search" class="navbar-form navbar-left">
+            <div class="form-group">
+                <input type="text" placeholder="Search" class="form-control">
+            </div>
+        </form>
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to "Sign Up",new_user_path %></li>
+          <li><%= link_to "Log in", new_session_path %></li>
 
-           <ul class="nav navbar-nav navbar-right">
-             <li><%= link_to "Help",   '#' %></li>
-             <li><%= link_to "Sign Up",new_user_path %></li>
-             <li><%= link_to "Log in", new_session_path %></li>
-           </ul>
-         </nav>
-       </div>
-     </header>
+        </ul>
+    </div>
+    </nav>
 
     <div class="container-fluid">
 
